--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,11 +3,11 @@
 @layer base {
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-BlackItalic.eot');
-    src: url('../public/fonts/Gilroy-BlackItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-BlackItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-BlackItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-BlackItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-BlackItalic.eot');
+    src: url('/public/fonts/Gilroy-BlackItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-BlackItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-BlackItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
     font-display: swap;
@@ -15,11 +15,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Black.eot');
-    src: url('../public/fonts/Gilroy-Black.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Black.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Black.woff') format('woff'),
-      url('../public/fonts/Gilroy-Black.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Black.eot');
+    src: url('/public/fonts/Gilroy-Black.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Black.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Black.woff') format('woff'),
+      url('/public/fonts/Gilroy-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -27,11 +27,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Bold.eot');
-    src: url('../public/fonts/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Bold.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Bold.woff') format('woff'),
-      url('../public/fonts/Gilroy-Bold.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Bold.eot');
+    src: url('/public/fonts/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Bold.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Bold.woff') format('woff'),
+      url('/public/fonts/Gilroy-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -39,11 +39,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Extrabold.eot');
-    src: url('../public/fonts/Gilroy-Extrabold.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Extrabold.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Extrabold.woff') format('woff'),
-      url('../public/fonts/Gilroy-Extrabold.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Extrabold.eot');
+    src: url('/public/fonts/Gilroy-Extrabold.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Extrabold.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Extrabold.woff') format('woff'),
+      url('/public/fonts/Gilroy-Extrabold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -51,11 +51,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-LightItalic.eot');
-    src: url('../public/fonts/Gilroy-LightItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-LightItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-LightItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-LightItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-LightItalic.eot');
+    src: url('/public/fonts/Gilroy-LightItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-LightItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-LightItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -63,11 +63,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-MediumItalic.eot');
-    src: url('../public/fonts/Gilroy-MediumItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-MediumItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-MediumItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-MediumItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-MediumItalic.eot');
+    src: url('/public/fonts/Gilroy-MediumItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-MediumItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-MediumItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-MediumItalic.ttf') format('truetype');
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -75,11 +75,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Light.eot');
-    src: url('../public/fonts/Gilroy-Light.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Light.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Light.woff') format('woff'),
-      url('../public/fonts/Gilroy-Light.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Light.eot');
+    src: url('/public/fonts/Gilroy-Light.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Light.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Light.woff') format('woff'),
+      url('/public/fonts/Gilroy-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -87,11 +87,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-BoldItalic.eot');
-    src: url('../public/fonts/Gilroy-BoldItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-BoldItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-BoldItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-BoldItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-BoldItalic.eot');
+    src: url('/public/fonts/Gilroy-BoldItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-BoldItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-BoldItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-BoldItalic.ttf') format('truetype');
     font-weight: 700;
     font-style: italic;
     font-display: swap;
@@ -99,11 +99,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-HeavyItalic.eot');
-    src: url('../public/fonts/Gilroy-HeavyItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-HeavyItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-HeavyItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-HeavyItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-HeavyItalic.eot');
+    src: url('/public/fonts/Gilroy-HeavyItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-HeavyItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-HeavyItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-HeavyItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
     font-display: swap;
@@ -111,11 +111,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-ExtraboldItalic.eot');
-    src: url('../public/fonts/Gilroy-ExtraboldItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-ExtraboldItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-ExtraboldItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-ExtraboldItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-ExtraboldItalic.eot');
+    src: url('/public/fonts/Gilroy-ExtraboldItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-ExtraboldItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-ExtraboldItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-ExtraboldItalic.ttf') format('truetype');
     font-weight: 800;
     font-style: italic;
     font-display: swap;
@@ -123,11 +123,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-RegularItalic.eot');
-    src: url('../public/fonts/Gilroy-RegularItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-RegularItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-RegularItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-RegularItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-RegularItalic.eot');
+    src: url('/public/fonts/Gilroy-RegularItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-RegularItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-RegularItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-RegularItalic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -135,11 +135,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Regular.eot');
-    src: url('../public/fonts/Gilroy-Regular.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Regular.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Regular.woff') format('woff'),
-      url('../public/fonts/Gilroy-Regular.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Regular.eot');
+    src: url('/public/fonts/Gilroy-Regular.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Regular.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Regular.woff') format('woff'),
+      url('/public/fonts/Gilroy-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -147,11 +147,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Medium.eot');
-    src: url('../public/fonts/Gilroy-Medium.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Medium.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Medium.woff') format('woff'),
-      url('../public/fonts/Gilroy-Medium.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Medium.eot');
+    src: url('/public/fonts/Gilroy-Medium.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Medium.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Medium.woff') format('woff'),
+      url('/public/fonts/Gilroy-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -159,11 +159,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Heavy.eot');
-    src: url('../public/fonts/Gilroy-Heavy.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Heavy.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Heavy.woff') format('woff'),
-      url('../public/fonts/Gilroy-Heavy.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Heavy.eot');
+    src: url('/public/fonts/Gilroy-Heavy.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Heavy.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Heavy.woff') format('woff'),
+      url('/public/fonts/Gilroy-Heavy.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -171,11 +171,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-UltraLightItalic.eot');
-    src: url('../public/fonts/Gilroy-UltraLightItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-UltraLightItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-UltraLightItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-UltraLightItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-UltraLightItalic.eot');
+    src: url('/public/fonts/Gilroy-UltraLightItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-UltraLightItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-UltraLightItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-UltraLightItalic.ttf') format('truetype');
     font-weight: 200;
     font-style: italic;
     font-display: swap;
@@ -183,11 +183,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-SemiboldItalic.eot');
-    src: url('../public/fonts/Gilroy-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-SemiboldItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-SemiboldItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-SemiboldItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-SemiboldItalic.eot');
+    src: url('/public/fonts/Gilroy-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-SemiboldItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-SemiboldItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-SemiboldItalic.ttf') format('truetype');
     font-weight: 600;
     font-style: italic;
     font-display: swap;
@@ -195,11 +195,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Semibold.eot');
-    src: url('../public/fonts/Gilroy-Semibold.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Semibold.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Semibold.woff') format('woff'),
-      url('../public/fonts/Gilroy-Semibold.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Semibold.eot');
+    src: url('/public/fonts/Gilroy-Semibold.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Semibold.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Semibold.woff') format('woff'),
+      url('/public/fonts/Gilroy-Semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -207,11 +207,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-Thin.eot');
-    src: url('../public/fonts/Gilroy-Thin.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-Thin.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-Thin.woff') format('woff'),
-      url('../public/fonts/Gilroy-Thin.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-Thin.eot');
+    src: url('/public/fonts/Gilroy-Thin.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-Thin.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-Thin.woff') format('woff'),
+      url('/public/fonts/Gilroy-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -219,11 +219,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-ThinItalic.eot');
-    src: url('../public/fonts/Gilroy-ThinItalic.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-ThinItalic.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-ThinItalic.woff') format('woff'),
-      url('../public/fonts/Gilroy-ThinItalic.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-ThinItalic.eot');
+    src: url('/public/fonts/Gilroy-ThinItalic.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-ThinItalic.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-ThinItalic.woff') format('woff'),
+      url('/public/fonts/Gilroy-ThinItalic.ttf') format('truetype');
     font-weight: 100;
     font-style: italic;
     font-display: swap;
@@ -231,11 +231,11 @@
 
   @font-face {
     font-family: 'Gilroy';
-    src: url('../public/fonts/Gilroy-UltraLight.eot');
-    src: url('../public/fonts/Gilroy-UltraLight.eot?#iefix') format('embedded-opentype'),
-      url('../public/fonts/Gilroy-UltraLight.woff2') format('woff2'),
-      url('../public/fonts/Gilroy-UltraLight.woff') format('woff'),
-      url('../public/fonts/Gilroy-UltraLight.ttf') format('truetype');
+    src: url('/public/fonts/Gilroy-UltraLight.eot');
+    src: url('/public/fonts/Gilroy-UltraLight.eot?#iefix') format('embedded-opentype'),
+      url('/public/fonts/Gilroy-UltraLight.woff2') format('woff2'),
+      url('/public/fonts/Gilroy-UltraLight.woff') format('woff'),
+      url('/public/fonts/Gilroy-UltraLight.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
