refactor: change structure of fonts file

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import './fonts.css'; */
 
 @layer base {
   html {
@@ -9,6 +10,4 @@
   a {
     @apply text-light hover:text-yellow;
   }
-
-  @import './fonts.css';
 }
