--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* @import './fonts.css'; */
+@import './fonts.css';
 
 @layer base {
   html {
